-The changes wasnt notable on iPhone so im trying to fix that

--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -16,7 +16,6 @@ section#projects {
         position: relative;
         aspect-ratio: 16 / 9;
         width: 85%;
-        height: 100%;
         max-width: 280px;
         margin-top: 60px;
         cursor: pointer;
